--- a/XGB.ipynb
+++ b/XGB.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Shritej24c/Credit-Risk/blob/main/XGB.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Shritej24c/Credit-Risk/blob/kriti/XGB.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -129,7 +129,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "IaP-HSPz6kEr"
       },
@@ -280,7 +280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "is_executing": true
@@ -305,7 +305,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "is_executing": true
@@ -1835,6 +1835,7 @@
       },
       "outputs": [],
       "source": [
+        "#convert to datetime from string\n",
         "train['S_2'] = pd.to_datetime(train['S_2'])"
       ]
     },
@@ -3218,6 +3219,7 @@
         }
       ],
       "source": [
+        "#join labels with customer id, left join\n",
         "df = pd.merge(train, labels, on = 'customer_ID', how = 'left')\n",
         "df.head()"
       ]
@@ -3265,6 +3267,7 @@
         }
       ],
       "source": [
+        "#10 to 13 observations for every customer\n",
         "len(df['customer_ID'].unique())"
       ]
     },
@@ -3288,6 +3291,7 @@
         }
       ],
       "source": [
+        "#loc = name of column, iloc = index of column. Customer id to first row\n",
         "df.loc[df['customer_ID'] == df.iloc[1,0], :].shape"
       ]
     },
@@ -3311,6 +3315,7 @@
         }
       ],
       "source": [
+        "#total number of observations / total number of customers\n",
         "5531451/458913"
       ]
     },
@@ -6644,6 +6649,7 @@
         }
       ],
       "source": [
+        "#grouping it by months and checking the count. Set index S_2 in datetime format\n",
         "df1.set_index('S_2').groupby(pd.Grouper(freq = 'M')).count()"
       ]
     },
@@ -6678,6 +6684,7 @@
         }
       ],
       "source": [
+        "#check null in each column. Basically checking in the Target column\n",
         "df1.isnull().sum()"
       ]
     },
@@ -6706,6 +6713,7 @@
         }
       ],
       "source": [
+        "#Categorial data to convert to dummies.\n",
         "for i in df1.columns:\n",
         "    if df1[i].dtypes != 'float64':\n",
         "        print(i, df1[i].dtypes)"
@@ -6783,6 +6791,7 @@
         }
       ],
       "source": [
+        "#Categorical values = objects therefore they'll be converted into dummies.\n",
         "print(\"Min: \", df1['S_2'].min(), \"Max: \", df1['S_2'].max())"
       ]
     },
@@ -6794,6 +6803,8 @@
       },
       "outputs": [],
       "source": [
+        "#dummies. Then drop the original columns, 2 columns. D_63 and D_64 are dropped.\n",
+        "#191 - 2\n",
         "df_new1 = pd.get_dummies(df1, columns = ['D_63', 'D_64'], drop_first = True)"
       ]
     },
@@ -7518,15 +7529,6 @@
         "t2 = t.time()\n",
         "print(t2-t1)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "dmMFTzM36kE1"
-      },
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "code",
@@ -8804,6 +8806,7 @@
         }
       ],
       "source": [
+        "# : = all rows\n",
         "df = df_new.loc[:, col]\n",
         "df.shape"
       ]
@@ -9233,6 +9236,7 @@
         }
       ],
       "source": [
+        "#grid search = P&C of each value in the document (3*2*2*2*3)\n",
         "t1 = t.time()\n",
         "grid_search = pd.DataFrame(columns = ['No. of Trees', 'LR', 'Subsample', '%features', 'Default Weight', 'AUC Train', 'AUC Test1', 'AUC Test2'])\n",
         "num_trees = [50, 100, 300]\n",
@@ -9265,6 +9269,18 @@
         "grid_search\n",
         "                    "
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#bias - error in training\n",
+        "#variance - consistency "
+      ],
+      "metadata": {
+        "id": "z4IkoZurc1BV"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -9381,7 +9397,7 @@
       "metadata": {
         "id": "DVA-rh8U6-SS"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9395,7 +9411,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -10109,7 +10125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -10179,7 +10195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "p3Vu7rKX6kE5"
       },
@@ -10201,7 +10217,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -10924,7 +10940,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "XWnl-WnT6kE4"
       },
@@ -10941,7 +10957,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "57slY3NQ6kE4"
       },
@@ -10964,7 +10980,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "_5mEfExE6kE5"
       },
@@ -10977,7 +10993,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -11466,7 +11482,7 @@
         "id": "P1KTIfTfJ7do",
         "outputId": "e355669a-2df3-4225-dc2a-c06c12f347d2"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11567,7 +11583,7 @@
         "id": "TSqpl5iUQXKd",
         "outputId": "a1487303-ee51-4064-b40d-960294a167ad"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11593,7 +11609,7 @@
         "id": "QQ2VzV9KWYPY",
         "outputId": "293449db-1232-40af-e854-89a2921c4a99"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11619,7 +11635,7 @@
         "id": "FREwu7UJYWGF",
         "outputId": "64b731f2-4093-42c8-b08f-fd106f84764a"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11645,7 +11661,7 @@
         "id": "Fal6QoJSYcXm",
         "outputId": "a0ae02d1-103d-416b-b2c9-ef977c195c45"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11668,7 +11684,7 @@
         "id": "GF0QiaEQuS3x",
         "outputId": "ce52db2a-92a0-4973-a23d-d7fdc32fb012"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11695,7 +11711,7 @@
         "id": "UbkQeqe9tDWy",
         "outputId": "24d17cbc-07fd-421f-c10f-0621cb4c0a4f"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11727,7 +11743,7 @@
         "id": "BlK083WWZd9D",
         "outputId": "ee64cbee-c2ab-4e02-b7c6-64483ca61912"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11754,7 +11770,7 @@
         "id": "sIEentBFZmRd",
         "outputId": "ee96fe19-3ebd-414d-c00c-74f87a176f9a"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11779,7 +11795,7 @@
         "id": "SDL38Vp0ZuP0",
         "outputId": "94367beb-78cf-4d77-c5e4-c0dfe00b7c70"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11803,7 +11819,7 @@
         "id": "q8idkXpEYvtL",
         "outputId": "db30fff2-c093-4846-92fe-26288600c914"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11829,7 +11845,7 @@
         "id": "nYRTdYtiZdEm",
         "outputId": "1e457199-e813-443c-8e5a-cc1b8b1f1a42"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11882,7 +11898,7 @@
         "id": "em0DDYHNZCzm",
         "outputId": "eae747d5-914f-4f1c-a4be-fc1d3c4ca0b1"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11962,7 +11978,7 @@
         "id": "uetR94E87tq-",
         "outputId": "3c98d9f0-f8e4-4deb-ebad-c6eccf137949"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -12005,7 +12021,7 @@
         "id": "20VinYRH8Ngm",
         "outputId": "09222344-7bdc-4aa7-cb05-441112bd6100"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -12045,7 +12061,7 @@
         "id": "SpZ5BkCcQs5I",
         "outputId": "fe701d13-4ade-4a94-d002-b8b0cfb713f8"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -12084,7 +12100,7 @@
         "id": "VU7ANjCS8uly",
         "outputId": "bfd4abc3-8c40-42ca-d1cb-71b4a9cab2de"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12110,7 +12126,7 @@
         "id": "L-aFXagP6M_B",
         "outputId": "ef2f3883-577b-4303-d253-b79632be3ea2"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12136,7 +12152,7 @@
         "id": "OMWF57Xp6Wil",
         "outputId": "05989beb-03dd-4a15-a7f4-6badb1396e73"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12224,7 +12240,7 @@
         "id": "9y8-RZWpurrd",
         "outputId": "f2bb994e-ae03-44f8-9602-40d4291d2b9e"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -12963,7 +12979,7 @@
       "metadata": {
         "id": "3Vo40d-C_p_a"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -12974,7 +12990,7 @@
       "metadata": {
         "id": "zmRbiTcgD8Wk"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -12989,7 +13005,7 @@
         "id": "-ijFVCFjWGJO",
         "outputId": "58623149-41ca-4d1e-f463-23256baa1a97"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -13692,7 +13708,7 @@
         "id": "BjDD5sLJrcnX",
         "outputId": "2cfe71bd-a11e-4b3e-e8e8-de67e0ec77e3"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -13716,7 +13732,7 @@
       "metadata": {
         "id": "rh2fjbdjMjn7"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -13733,7 +13749,7 @@
         "id": "c7z-hAGCj0Cq",
         "outputId": "301f928a-98cd-4a8d-c640-5275eefc5222"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13774,7 +13790,7 @@
         "id": "ENlr5m502cDv",
         "outputId": "13caf16e-8536-4237-c903-ce730b21e47b"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -13801,7 +13817,7 @@
         "id": "-PKexV7-rSoo",
         "outputId": "2ee01989-9b1c-4c0c-87f2-82856272ac71"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -14597,7 +14613,7 @@
         "id": "GDb8IQsjQ8Zm",
         "outputId": "91b663cd-5aea-4af8-b45d-aa8269b51b03"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -14621,7 +14637,7 @@
         "id": "hDr-KOguSCkC",
         "outputId": "4ce9afcf-994b-4135-d42e-7799ed8c5816"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15073,7 +15089,7 @@
         "id": "uDHbm-JUSFEG",
         "outputId": "47428164-6b26-4534-8897-0e1548ad86b2"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15544,7 +15560,7 @@
         "id": "WT9ZB-FEj9Qk",
         "outputId": "4035e44d-4a17-4eaa-accc-57e95fb599a4"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15567,7 +15583,7 @@
       "metadata": {
         "id": "dcdBjtYSRymV"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     }
   ],
