--- a/XGB.ipynb
+++ b/XGB.ipynb
@@ -10120,6 +10120,8 @@
         }
       ],
       "source": [
+        "#remove values less than 1% and greater than 99%.\n",
+        "#checking the 1% and 99% of each\n",
         "xtrain.describe(percentiles = [.01, .99]).T"
       ]
     },
@@ -10202,6 +10204,8 @@
       "outputs": [],
       "source": [
         "for i in xtrain.columns:\n",
+        "  #column value > 99%, cap it else keep the same value.\n",
+        "  #column value < 1%, cap it else keep the same value.\n",
         "    xtrain[i] = np.where(xtrain[i] > xtrain[i].quantile(0.99), xtrain[i].quantile(0.99), xtrain[i] )\n",
         "    xtrain[i] = np.where(xtrain[i] < xtrain[i].quantile(0.01), xtrain[i].quantile(0.01), xtrain[i] )\n",
         "\n",
@@ -10946,6 +10950,9 @@
       },
       "outputs": [],
       "source": [
+        "#normalise according to xtrain(take that as a base) \n",
+        "#varying from 0 to 100. If to be kept between 0 and 1 then it will adjust accordingly then 99 = 0.99\n",
+        "#now apply the same to xtest2 and xtest2 if it is between 1 and 200. As we have to fix the parameters i.e. sd or mean\n",
         "from sklearn.preprocessing import StandardScaler, RobustScaler\n",
         "sc = StandardScaler()\n",
         "sc.fit(xtrain)\n",
@@ -10986,6 +10993,7 @@
       },
       "outputs": [],
       "source": [
+        "#replace NaNs with 0\n",
         "xtrain_n_df.fillna(0,inplace=True)\n",
         "xtest1_n_df.fillna(0,inplace=True)\n",
         "xtest2_n_df.fillna(0,inplace=True)"
@@ -11445,6 +11453,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#build a NN and run a grid search\n",
         "def build_classifier(activation = 'relu', dropout_rate = .5, neurons = 4):\n",
         "    # first step: create a Sequential object, as a sequence of layers. B/C NN is a sequence of layers.\n",
         "    classifier = Sequential()\n",
@@ -11570,6 +11579,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Checking values\n",
         "means = grid_search.cv_results_['mean_test_score']\n",
         "stds = grid_search.cv_results_['std_test_score']\n",
         "params = grid_search.cv_results_['params']\n",
@@ -11734,6 +11744,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#roc - auc concepts by varying thresholds\n",
         "roc_auc_score(ytrain, train_pred[:, 1])"
       ],
       "metadata": {
@@ -11953,14 +11964,17 @@
         "# first step: create a Sequential object, as a sequence of layers. B/C NN is a sequence of layers.\n",
         "classifier = Sequential()\n",
         "\n",
-        "# add the first hidden layer\n",
+        "# add the first hidden layer. #kernel_initializer='glorot_uniform' => uniform distribution of weights w1, w2, w3.... to start off with\n",
         "classifier.add(Dense(units=6,kernel_initializer='glorot_uniform',\n",
         "                    activation = 'relu'))\n",
         "\n",
         "# add the second hidden layer\n",
         "classifier.add(Dense(units=6,kernel_initializer='glorot_uniform',\n",
         "                activation = 'relu'))\n",
-        "\n",
+        "#relu -> 0 if x<0 and x if x>0. Max(0,x). Caps negative values\n",
+        "#tanh varies from -1 to 1\n",
+        "#sigmoid varies from 0 to 1. Sigmoid is the output activation function for classification function as it's probability(0/1 in the output)\n",
+        "#epoch - Circling the same training sample(input) n number of times. Eg: 1,00,000 is the input, batch size = 1000. Therefore iterations would be 100000/1000 = 100 cycles for one epoch.Each epoch takes 1000observations from input. next epoch next other observations. Random sampling. For the second epoch, it would be the same number of cycles for the same input. More iterations more accuracy.\n",
         "# add the output layer\n",
         "classifier.add(Dense(units=1,kernel_initializer='glorot_uniform',\n",
         "                    activation = 'sigmoid'))\n",
@@ -12179,6 +12193,7 @@
       "cell_type": "code",
       "source": [
         "# first step: create a Sequential object, as a sequence of layers. B/C NN is a sequence of layers.\n",
+        "#By increasing the batch size, over fitting decreases.\n",
         "t1 = t.time()\n",
         "grid_search_nn1 = pd.DataFrame(columns = ['hd', 'nodes', 'activation', 'dropout', 'batch_size', 'auc_train', 'auc_test1', 'auc_test2'])\n",
         "\n",
@@ -12191,7 +12206,7 @@
         "row = 0\n",
         "for i in neurons:\n",
         "  for a in activations:\n",
-        "    for d in dropout:\n",
+        "    for d in dropout: #dropput : when the model is complex then it becomes overfitted. To reduce complexity and overfitting we drop the neurons. % of dropping the neurons.\n",
         "      for s in batch_sizes:\n",
         "        \n",
         "        grid_search_nn1.loc[row, 'nodes'] = i\n",
