--- a/XGB.ipynb
+++ b/XGB.ipynb
@@ -68,7 +68,7 @@
         }
       ],
       "source": [
-        "!pip install tensorflow\n",
+        "\\!pip install tensorflow\n",
         "!pip install keras"
       ]
     },
@@ -3219,6 +3219,7 @@
         }
       ],
       "source": [
+        "#STEP 3\n",
         "#join labels with customer id, left join\n",
         "df = pd.merge(train, labels, on = 'customer_ID', how = 'left')\n",
         "df.head()"
@@ -3355,6 +3356,7 @@
         }
       ],
       "source": [
+        "#STEP 2\n",
         "df12 = df.sample(frac=1, random_state = 21)  #shuffling the data\n",
         "df1 = df12.groupby('customer_ID',as_index=False).first()\n",
         "print(\"Min :\", df1['S_2'].min(), \"Max: \", df1['S_2'].max())\n",
@@ -6713,6 +6715,7 @@
         }
       ],
       "source": [
+        "#FOR STEP 5\n",
         "#Categorial data to convert to dummies.\n",
         "for i in df1.columns:\n",
         "    if df1[i].dtypes != 'float64':\n",
@@ -6804,7 +6807,7 @@
       "outputs": [],
       "source": [
         "#dummies. Then drop the original columns, 2 columns. D_63 and D_64 are dropped.\n",
-        "#191 - 2\n",
+        "#191 \n",
         "df_new1 = pd.get_dummies(df1, columns = ['D_63', 'D_64'], drop_first = True)"
       ]
     },
@@ -7437,6 +7440,7 @@
       },
       "outputs": [],
       "source": [
+        "#STEP 6\n",
         "train_df = df_new.loc[(df_new['S_2'] >= '2017-05') & (df_new['S_2'] <= '2018-01'), :]\n",
         "test1_df = df_new.loc[(df_new['S_2'] <= '2017-04') , :]\n",
         "test2_df = df_new.loc[ (df_new['S_2'] >= '2018-02'), :]"
@@ -7520,6 +7524,7 @@
         }
       ],
       "source": [
+        "#STEP 5\n",
         "t1 = t.time()\n",
         "m1 = xgb.XGBClassifier(random_state = 21)\n",
         "m1.fit(xtrain, ytrain)\n",
@@ -9237,6 +9242,7 @@
       ],
       "source": [
         "#grid search = P&C of each value in the document (3*2*2*2*3)\n",
+        "#STEP 10\n",
         "t1 = t.time()\n",
         "grid_search = pd.DataFrame(columns = ['No. of Trees', 'LR', 'Subsample', '%features', 'Default Weight', 'AUC Train', 'AUC Test1', 'AUC Test2'])\n",
         "num_trees = [50, 100, 300]\n",
@@ -9290,6 +9296,7 @@
       },
       "outputs": [],
       "source": [
+        "#STEP 10\n",
         "grid_search.to_csv(\"grid_search.csv\", index = False)"
       ]
     },
@@ -9370,6 +9377,7 @@
       },
       "outputs": [],
       "source": [
+        "#STEP 7 - Train sample\n",
         "xgb_inst = xgb.XGBClassifier(n_estimators = 500, learning_rate = 0.1, subsample = 0.8, colsample_bytree = 1, scale_pos_weight = 1, random_state = 21)\n",
         "final_xgb = xgb_inst.fit(xtrain, ytrain)\n",
         "final_xgb.save_model(\"final_xgb.json\")"
@@ -9387,6 +9395,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#STEP 12\n",
         "xtest1 = pd.read_csv('xtest1.csv', index_col = False)\n",
         "xtest2 = pd.read_csv('xtest2.csv', index_col = False)\n",
         "ytest1 = pd.read_csv('ytest1.csv', index_col = False)\n",
@@ -11453,6 +11462,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#STEP 13\n",
         "#build a NN and run a grid search\n",
         "def build_classifier(activation = 'relu', dropout_rate = .5, neurons = 4):\n",
         "    # first step: create a Sequential object, as a sequence of layers. B/C NN is a sequence of layers.\n",
