--- a/final model.ipynb
+++ b/final model.ipynb
@@ -7,8 +7,17 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Shritej24c/Credit-Risk/blob/main/XGB.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Shritej24c/Credit-Risk/blob/main/final%20model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Installing packages using pip"
+      ],
+      "metadata": {
+        "id": "3FfdTqme0KOr"
+      }
     },
     {
       "cell_type": "code",
@@ -118,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "is_executing": true
@@ -144,7 +153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "is_executing": true
@@ -164,6 +173,17 @@
       "source": [
         "### Reading CSVs"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Used data from \"American Express - Default Prediction\" Kaggle Competition. \n",
+        "\n",
+        "The objective of this competition is to predict the probability that a customer does not pay back their credit card balance amount in the future based on their monthly customer profile. The target binary variable is calculated by observing 18 months performance window after the latest credit card statement, and if the customer does not pay due amount in 120 days after their latest statement date it is considered a default event.\n"
+      ],
+      "metadata": {
+        "id": "OublIepR0SJU"
+      }
     },
     {
       "cell_type": "code",
@@ -1542,7 +1562,7 @@
         }
       ],
       "source": [
-        "train = pd.read_csv(\"train_data.csv\")\n",
+        "train = pd.read_csv(\"train_data.csv\") # X variables \n",
         "train.head()"
       ]
     },
@@ -1650,7 +1670,7 @@
         }
       ],
       "source": [
-        "labels = pd.read_csv(\"train_labels.csv\")\n",
+        "labels = pd.read_csv(\"train_labels.csv\") # Y variables\n",
         "labels.head()"
       ]
     },
@@ -3099,6 +3119,15 @@
       "source": [
         "len(df['customer_ID'].unique())"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "TOTAL No of CUSTOMERS - 458913"
+      ],
+      "metadata": {
+        "id": "eLVH1zBT07PI"
+      }
     },
     {
       "cell_type": "code",
@@ -6523,6 +6552,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Checking for Categorical Variables "
+      ],
+      "metadata": {
+        "id": "bpp_1x9a1OVA"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -6575,7 +6613,7 @@
         }
       ],
       "source": [
-        "# Check unique values in D_63 columns\n",
+        "# Check unique values in D_63 column\n",
         "df1['D_63'].unique()"
       ]
     },
@@ -6599,7 +6637,7 @@
         }
       ],
       "source": [
-        "# Check unique values in D_64 columns\n",
+        "# Check unique values in D_64 column\n",
         "df1['D_64'].unique()"
       ]
     },
@@ -7020,6 +7058,15 @@
       "source": [
         "xtrain.shape"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Feature Selection by extracting feature importance from 2 models"
+      ],
+      "metadata": {
+        "id": "a5iDIqwd7BJM"
+      }
     },
     {
       "cell_type": "code",
@@ -7647,6 +7694,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Final Sets of features to be used for modelling"
+      ],
+      "metadata": {
+        "id": "lnF9c7s07gyd"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -7858,6 +7914,38 @@
       "source": [
         "ytrain.shape"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## XGBoost"
+      ],
+      "metadata": {
+        "id": "kUlM1rMN8piE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Grid Search for XGBoost model"
+      ],
+      "metadata": {
+        "id": "D3RZi3U87sFr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Combinations:\n",
+        "1. Number of Trees: [50, 100, 300]\n",
+        "2. Learning Rates = [0.01, .1]\n",
+        "3. % of obs used in each tree = [.5, .8]\n",
+        "4. % of features used in each tree = [.5, 1]\n",
+        "5. Weight of default obs = [1, 5, 10]"
+      ],
+      "metadata": {
+        "id": "GOfRwpa_7wSr"
+      }
     },
     {
       "cell_type": "code",
@@ -8174,6 +8262,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "YuIQQ6Rg7qfM"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -8254,6 +8349,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Final XGB MODEL"
+      ],
+      "metadata": {
+        "id": "RvEVhauA8b0O"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -8298,7 +8402,7 @@
         "id": "12xALGlO6kE4"
       },
       "source": [
-        "### Neural Network "
+        "## Neural Network "
       ]
     },
     {
@@ -8314,7 +8418,7 @@
       "metadata": {
         "id": "DVA-rh8U6-SS"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8329,7 +8433,7 @@
         "id": "OX5KaBqf7w9p",
         "outputId": "e509b55c-27c4-427c-88cc-decade7e7e6e"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8351,7 +8455,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -9091,7 +9195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -9163,7 +9267,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "p3Vu7rKX6kE5"
       },
@@ -9185,7 +9289,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -9934,7 +10038,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "XWnl-WnT6kE4"
       },
@@ -9951,7 +10055,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "57slY3NQ6kE4"
       },
@@ -9974,7 +10078,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "_5mEfExE6kE5"
       },
@@ -9987,7 +10091,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -11143,7 +11247,7 @@
         "id": "9y8-RZWpurrd",
         "outputId": "7e87c26c-29d2-442a-907d-d57f3a6ff707"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11893,7 +11997,7 @@
       "metadata": {
         "id": "zmRbiTcgD8Wk"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11910,7 +12014,7 @@
         "id": "2se9fzgwevyt",
         "outputId": "f7e49919-6e7a-4191-90ea-1e25873fa5b3"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12303,7 +12407,7 @@
         "id": "GlWimQUOEEQi",
         "outputId": "1f1b2f6b-bc2b-4a01-f1de-f401da50553b"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13047,7 +13151,7 @@
         "id": "BjDD5sLJrcnX",
         "outputId": "6f5a0824-66ea-4315-f68c-fcf7cdf47433"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -13374,7 +13478,7 @@
       "metadata": {
         "id": "BtToR-UlRFyI"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -13391,7 +13495,7 @@
         "id": "x2D3d89Re78q",
         "outputId": "37af2f85-f8cf-4827-bc9b-6ab1cc3b48fe"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -13910,7 +14014,7 @@
       "metadata": {
         "id": "6tICphoOVQN5"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -13925,7 +14029,7 @@
         "id": "5t2lgXt4f1PY",
         "outputId": "f4b220d0-3ac6-48f9-e016-af1dfa058e3f"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -13938,6 +14042,15 @@
           "execution_count": 57
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Final Neural Network"
+      ],
+      "metadata": {
+        "id": "lUJdiuS49-mg"
+      }
     },
     {
       "cell_type": "code",
@@ -13970,7 +14083,7 @@
         "id": "Xcp5hvYPgrQW",
         "outputId": "ae31ae56-115f-4b40-b081-99ceeb0384ee"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -14040,7 +14153,7 @@
       "metadata": {
         "id": "N3By4Vr_hLMH"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -14078,7 +14191,7 @@
       "metadata": {
         "id": "4ZWFIldeihQc"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -14094,7 +14207,7 @@
         "id": "T5IrcsV4hJiF",
         "outputId": "63391f93-3c71-489e-9faa-9192983fdbed"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -14143,7 +14256,7 @@
         "id": "TTnFefedjH5z",
         "outputId": "1ebdcd5a-955c-4ce2-f1dd-bf050324e2b7"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -14183,7 +14296,7 @@
         "id": "6WyuXvwOnmzx",
         "outputId": "9a8d5455-2843-4053-9188-c8e92714ae83"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -14211,6 +14324,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Rank Ordering"
+      ],
+      "metadata": {
+        "id": "ajCJBVRP90_8"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Rank Ordering\n",
@@ -14228,7 +14350,7 @@
         "id": "Gj-Rkk8lbHGU",
         "outputId": "739d9b95-c9ba-40e2-cf9a-6f1235d3c7fb"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -14268,7 +14390,7 @@
         "id": "JaWhCWOQbWEm",
         "outputId": "33fd7b02-d673-49e4-dd43-8d2d81bddbad"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -14480,7 +14602,7 @@
         "id": "4X_TSkMbbuOo",
         "outputId": "af2b5c48-a1a4-487c-a699-1bf239f8908e"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -14522,7 +14644,7 @@
         "id": "9sRGj6meb1M4",
         "outputId": "15e76e02-5587-4e02-e062-46d5509be46a"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -14564,7 +14686,7 @@
         "id": "GEryhcv7cAh8",
         "outputId": "6f6bd3b6-906c-4c76-c544-0ec43d65762e"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -14638,6 +14760,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Strategy for calculating - Default Rate and Revenue"
+      ],
+      "metadata": {
+        "id": "jtnfg0xM-dQK"
+      }
     },
     {
       "cell_type": "code",
@@ -14938,7 +15069,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Executive Summary"
+        "## Executive Summary"
       ],
       "metadata": {
         "id": "CDPM0upOMTOE"
@@ -15714,7 +15845,7 @@
         },
         "outputId": "e62ed61b-5197-4a65-838f-0fe9f882ef99"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15741,7 +15872,7 @@
         "id": "fTBXHrb1y6ji",
         "outputId": "0e7d2125-8339-412f-e1a2-9e61adfd98d0"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15768,7 +15899,7 @@
         "id": "rJcYZxH1y8hY",
         "outputId": "4d3eb80f-17d1-4956-bf67-5cbc50e1ee36"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15797,7 +15928,7 @@
         "id": "9V1RrnYwy-sC",
         "outputId": "718881a4-e22a-4cf0-8ecd-74cf4ad4c006"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -15825,7 +15956,7 @@
         "id": "zbwSrpMrjdzF",
         "outputId": "de8bf67c-ca8a-4184-a0bf-713c11b8afe4"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -15870,6 +16001,7 @@
     },
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "accelerator": "TPU",
